# exam_period_planner

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  custom.css  global.css  index.html  input.css
assets/: table_edit.js
public/: tailwind.css
src/: main.rs
